DFR-1349: Hearing notice for nondigital and litigants person